added newCalories to add/delete product response
